--- a/css/styles.css
+++ b/css/styles.css
@@ -31,14 +31,18 @@ body {
 }
 
 
+#missue{
+    margin: 0;
+    padding: 0;
+}
+
 .main {
     display: grid;
     grid-template-columns: 20% 1fr;
-    grid-template-rows: 10% 1fr 10% 10%;
+    grid-template-rows: 10% 1fr 10%;
     height: 100vh;
     grid-gap: .5em;
     grid-template-areas:
-            "nav article"
             "nav article"
             "nav article"
             "footer footer";
